--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,8 @@
 
 .page {
   min-inline-size: 360px;
-  margin: 0;
+  max-inline-size: 1440px;
+  margin: 0 auto;
   background-color: var(--bg-color);
   color: var(--text-color);
   font-size: var(--main-font);
@@ -48,6 +49,49 @@ figure {
   line-height: 0.9em;
   font-weight: 700;
   text-align: center;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  border-block-start: 1px solid var(--text-color);
+  border-block-end: 1px solid var(--text-color);
+  padding-block-start: 20px;
+  padding-block-end: 20px;
+}
+
+.header__theme-toggler {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+}
+
+.header__theme-button {
+  position: relative;
+  font: inherit;
+  color: currentColor;
+  cursor: pointer;
+  border: none;
+}
+
+.header__theme-button:not([disabled]):hover {
+  text-decoration-line: underline;
+  text-decoration-color: rgb(49 42 78 / 0.5);;
+}
+
+.header__theme-button_is-active {
+  font-weight: 700;
+}
+
+.header__theme-button_is-active::after {
+  position: absolute;
+  content: '';
+  bottom: 2px;
+  left: 0;
+  inline-size: calc(100%);
+  height: 0.5em;
+  background-color: var(--accent-color);
+  z-index: -1;
 }
 
 .heading {
@@ -90,4 +134,104 @@ figure {
   font-size: 18px;
   line-height: 2em;
   font-style: italic;
+}
+
+.content__list {
+  list-style: none;
+  font-family: var(--main-font);
+  font-size: 18px;
+  line-height: 1em;
+  font-weight: 400;
+}
+
+.content__item {
+  position: relative;
+  padding-inline-start: 40px;
+}
+
+.content__item:not(:last-child) {
+  margin-block-end: 10px;
+}
+
+.content__item::before {
+  position: absolute;
+  content: '';
+  left: 20px;
+  width: 15px;
+  height: 15px;
+  background-image: url(../images/marker-light.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.content__text-block_type_first-lettered .content__paragraph:first-of-type::first-letter {
+  display: inline-block;
+  margin-inline-start: 1px;
+  padding: 0 4px;
+  background-color: var(--accent-color);
+}
+
+.content__figure {
+  position: relative;
+  left: -5vi;
+  inline-size: calc(100% + 10vi);
+  margin-block-start: 7%;
+  margin-block-end: 7%;
+}
+
+.content__picture {
+  inline-size: 100%;
+}
+
+.content__picture-caption {
+  display: inline-block;
+  inline-size: 100%;
+  padding: 20px 0;
+  font-size: 18px;
+  line-height: 1em;
+  color: var(--text-color);
+  font-weight: 400;
+  border-block-end: 1px solid var(--text-color);
+  text-align: center;
+}
+
+.content__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 4 / 3;
+  margin-block-start: 7%;
+  border: 1px solid currentColor;
+}
+
+.content__card-title {
+  font-family: var(--accent-font);
+  font-size: 60px;
+  line-height: 0.9em;
+  font-weight: 600;
+}
+
+.colored-text {
+  position: relative;
+}
+
+.colored-text::after {
+  position: absolute;
+  content: '';
+  bottom: 10px;
+  left: -1%;
+  inline-size: calc(100% + 6px);
+  background-color: var(--accent-color);
+  height: 0.25em;
+  z-index: -1;
+}
+
+.content__card-subtitle {
+  font-family: var(--main-font);
+  font-size: 18px;
+  line-height: 1em;
+  font-weight: 400;
+  color: currentColor;
 }
